finish designing the Encryption object to maintain encryption and decryption in the backend

--- a/Project/appengine/test.yaml
+++ b/Project/appengine/test.yaml
@@ -82,6 +82,8 @@ libraries:
   version: latest
 - name: MySQLdb
   version: latest
+- name: pycrypto
+  version: latest
 # [END libraries]
 
 # [START env_variables]
