--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 /webapp2_draft/env27
 /webapp2_draft/cloud_sql_proxy
 /test
-
+/sql_config.yaml
 *.pyc
 *.swp
+/Project/appengine/SQL_Operation/config.yaml
